--- a/zad6/5image.html
+++ b/zad6/5image.html
@@ -9,10 +9,14 @@
      height="200">
 <img src="https://picsum.photos/400/200" alt="picusm" width="400"
      height="200">
+<br>
 <img src="https://picsum.photos/300/400" alt="picusm" width="300"
      height="400">
 <img src="https://picsum.photos/100/400" alt="picusm" width="100"
      height="400">
+<img src="https://picsum.photos/200/400" alt="picusm" width="200"
+     height="400">
+<br>
 <img src="https://picsum.photos/200" alt="picusm" width="200"
      height="200">
 
