--- a/zad6/5image.html
+++ b/zad6/5image.html
@@ -5,19 +5,19 @@
 </head>
 
 <body>
-<img src="https://picsum.photos/200/200" alt="picusm" width="200"
+<img src="images/image1.png" alt="picusm" width="200"
      height="200">
-<img src="https://picsum.photos/400/200" alt="picusm" width="400"
+<img src="images/image2.png" alt="picusm" width="400"
      height="200">
 <br>
-<img src="https://picsum.photos/300/400" alt="picusm" width="300"
+<img src="images/image3.png" alt="picusm" width="300"
      height="400">
-<img src="https://picsum.photos/100/400" alt="picusm" width="100"
+<img src="images/image4.png" alt="picusm" width="100"
      height="400">
-<img src="https://picsum.photos/200/400" alt="picusm" width="200"
+<img src="images/image5.png" alt="picusm" width="200"
      height="400">
 <br>
-<img src="https://picsum.photos/200" alt="picusm" width="200"
+<img src="images/image6.png" alt="picusm" width="200"
      height="200">
 
 
